Notify canGoBack/canGoForward on urlChanged instead of loadingChanged.

In order to support Fragment (#) based routing and history navigation
together, canGoBack/canGoForward properties should be notified when the
url is changed instead of when the page is loading.

Task-number: QTBUG-41849
Change-Id: Ic995fffa5c683dade88fbd98ffea90527a77261b
Reviewed-by: Michael Bruning <michael.bruning@digia.com>
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>
Reviewed-by: Jarred Nicholls <jarred.nicholls@gmail.com>